Twenty Seventeen: Fix broken and crowded pagination navigation on small screens
* Hides page numbers visually at smaller screen sizes.
* Reduced padding around `.wrap` class on smaller screens.
* Fixed issue with the page numbers not displaying the underline on `:hover`. This has been updated in the custom colors files, too.

Props laurelfulford, caspie.

Fixes #38394.

Built from https://develop.svn.wordpress.org/trunk@38996


git-svn-id: http://core.svn.wordpress.org/trunk@38938 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/assets/css/colors-dark.css
+++ b/wp-content/themes/twentyseventeen/assets/css/colors-dark.css
@@ -51,6 +51,10 @@
 .colors-dark .entry-footer .tags-links a:hover,
 .colors-dark .post-navigation a:focus,
 .colors-dark .post-navigation a:hover,
+.colors-dark .pagination a:not(.prev):not(.next):focus,
+.colors-dark .pagination a:not(.prev):not(.next):hover,
+.colors-dark .comments-pagination a:not(.prev):not(.next):focus,
+.colors-dark .comments-pagination a:not(.prev):not(.next):hover,
 .colors-dark .logged-in-as a:focus,
 .colors-dark .logged-in-as a:hover,
 .colors-dark a:focus .nav-title,
@@ -102,10 +106,10 @@
 .colors-dark .entry-footer .tags-links a:hover,
 .colors-dark .post-navigation a:focus,
 .colors-dark .post-navigation a:hover,
-.colors-dark .pagination a:focus,
-.colors-dark .pagination a:hover,
-.colors-dark .comments-pagination a:focus,
-.colors-dark .comments-pagination a:hover,
+.colors-dark .pagination a:not(.prev):not(.next):focus,
+.colors-dark .pagination a:not(.prev):not(.next):hover,
+.colors-dark .comments-pagination a:not(.prev):not(.next):focus,
+.colors-dark .comments-pagination a:not(.prev):not(.next):hover,
 .colors-dark .logged-in-as a:focus,
 .colors-dark .logged-in-as a:hover,
 .colors-dark a:focus .nav-title,
@@ -460,6 +464,7 @@ body.colors-dark,
 .colors-dark .comment-reply-link,
 .colors-dark a .nav-title,
 .colors-dark .pagination a,
+.colors-dark .comments-pagination a,
 .colors-dark .widget .widget-title a,
 .colors-dark .widget ul li a,
 .colors-dark .site-footer .widget-area ul li a,
@@ -501,11 +506,7 @@ body.colors-dark,
 .colors-dark .wp_widget_tag_cloud a:focus,
 .colors-dark .wp_widget_tag_cloud a:hover,
 .colors-dark .entry-footer .edit-link a.post-edit-link:focus,
-.colors-dark .entry-footer .edit-link a.post-edit-link:hover,
-.colors-dark .prev.page-numbers:focus,
-.colors-dark .prev.page-numbers:hover,
-.colors-dark .next.page-numbers:focus,
-.colors-dark .next.page-numbers:hover {
+.colors-dark .entry-footer .edit-link a.post-edit-link:hover {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
